kaba/lexer/KabaParser.py
# Generated from Kaba.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class KabaParser ( Parser ):

    grammarFileName = "Kaba.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Bok'", "'Torbas\\u0131'", "'boku'", 
                     "'kat'", "'s\\u00F6k'", "'\\u00E7ak'", "'yar'", "'ayn\\u0131'", 
                     "'tersi'", "'koymu\\u015F'", "'koymam\\u0131\\u015F'", 
                     "'ve'", "'ya'", "'siktiyse'", "'sikmediyse'", "'sikerken'", 
                     "'sallayarak'", "'\\u00E7\\u00F6k'", "'t\\u00FCk\\u00FCr'", 
                     "'denesene'", "'s\\u0131\\u00E7arsa'", "'rezalet'", 
                     "'patlat'", "'sok'", "'\\u015F\\u00F6yle'", "'b\\u00F6yle'", 
                     "'hadi'", "'siktir'", "'demi\\u015F'", "'dememi\\u015F'", 
                     "'virg\\u00FCl'", "'amk'", "'amq'", "'aq'", "'am\\u0131k'", 
                     "'am\\u0131nakoyum'", "'D\\u00FCz'", "'Sulu'", "'Net'", 
                     "'Sa\\u00E7ma'", "'Siker'", "'Sikmez'" ]

    symbolicNames = [ "<INVALID>", "BOK", "TORBASI", "BOKU", "KAT", "S\u0001K", 
                      "\u0000AK", "YAR", "AYNI", "TERSI", "KOYMU\u0005", 
                      "KOYMAMI\u0007", "VE", "YA", "SIKTIYSE", "SIKMEDIYSE", 
                      "SIKERKEN", "SALLAYARAK", "\u0000\u0001K", "T\u0001K\u0003R", 
                      "DENESENE", "SI\u0002ARSA", "REZALET", "PATLAT", "SOK", 
                      "\u0000\u0001YLE", "B\u0001YLE", "HADI", "SIKTIR", 
                      "DEMI\u0004", "DEMEMI\u0006", "VIRGUL", "AMK", "AMQ", 
                      "AQ", "AMIK", "AMINAKOYUM", "D\u0001Z", "SULU", "NET", 
                      "SA\u0002MA", "SIKER", "SIKMEZ", "STRING_BLOCK", "SUFFIX", 
                      "ID", "WS", "UNRECOGNIZED" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_terminator = 2
    RULE_declarationStmt = 3
    RULE_assignmentStmt = 4
    RULE_expressionStmt = 5
    RULE_ifStmt = 6
    RULE_whileStmt = 7
    RULE_forStmt = 8
    RULE_tryCatchStmt = 9
    RULE_throwStmt = 10
    RULE_block = 11
    RULE_functionDef = 12
    RULE_blockWithReturn = 13
    RULE_returnStmt = 14
    RULE_classDef = 15
    RULE_classMember = 16
    RULE_paramList = 17
    RULE_param = 18
    RULE_expression = 19
    RULE_expr_or = 20
    RULE_expr_and = 21
    RULE_expr_cmp = 22
    RULE_expr_add = 23
    RULE_expr_mul = 24
    RULE_expr_unary = 25
    RULE_atom = 26
    RULE_expressionList = 27
    RULE_functionCall = 28
    RULE_variableRef = 29
    RULE_booleanLiteral = 30
    RULE_typeSpec = 31
    RULE_arrayRef = 32
    RULE_className = 33
    RULE_functionName = 34
    RULE_variableName = 35

    ruleNames =  [ "program", "statement", "terminator", "declarationStmt", 
                   "assignmentStmt", "expressionStmt", "ifStmt", "whileStmt", 
                   "forStmt", "tryCatchStmt", "throwStmt", "block", "functionDef", 
                   "blockWithReturn", "returnStmt", "classDef", "classMember", 
                   "paramList", "param", "expression", "expr_or", "expr_and", 
                   "expr_cmp", "expr_add", "expr_mul", "expr_unary", "atom", 
                   "expressionList", "functionCall", "variableRef", "booleanLiteral", 
                   "typeSpec", "arrayRef", "className", "functionName", 
                   "variableName" ]

    EOF = Token.EOF
    BOK=1
    TORBASI=2
    BOKU=3
    KAT=4
    SÖK=5
    ÇAK=6
    YAR=7
    AYNI=8
    TERSI=9
    KOYMUŞ=10
    KOYMAMIŞ=11
    VE=12
    YA=13
    SIKTIYSE=14
    SIKMEDIYSE=15
    SIKERKEN=16
    SALLAYARAK=17
    ÇÖK=18
    TÜKÜR=19
    DENESENE=20
    SIÇARSA=21
    REZALET=22
    PATLAT=23
    SOK=24
    ŞÖYLE=25
    BÖYLE=26
    HADI=27
    SIKTIR=28
    DEMIŞ=29
    DEMEMIŞ=30
    VIRGUL=31
    AMK=32
    AMQ=33
    AQ=34
    AMIK=35
    AMINAKOYUM=36
    DÜZ=37
    SULU=38
    NET=39
    SAÇMA=40
    SIKER=41
    SIKMEZ=42
    STRING_BLOCK=43
    SUFFIX=44
    ID=45
    WS=46
    UNRECOGNIZED=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(KabaParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KabaParser.StatementContext)
            else:
                return self.getTypedRuleContext(KabaParser.StatementContext,i)


        def functionDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KabaParser.FunctionDefContext)
            else:
                return self.getTypedRuleContext(KabaParser.FunctionDefContext,i)


        def classDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KabaParser.ClassDefContext)
            else:
                return self.getTypedRuleContext(KabaParser.ClassDefContext,i)


        def getRuleIndex(self):
            return KabaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = KabaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 52639153782784) != 0):
                self.state = 75
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 72
                    self.statement()
                    pass

                elif la_ == 2:
                    self.state = 73
                    self.functionDef()
                    pass

                elif la_ == 3:
                    self.state = 74
                    self.classDef()
                    pass


                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self.match(KabaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationStmt(self):
            return self.getTypedRuleContext(KabaParser.DeclarationStmtContext,0)


        def terminator(self):
            return self.getTypedRuleContext(KabaParser.TerminatorContext,0)


        def assignmentStmt(self):
            return self.getTypedRuleContext(KabaParser.AssignmentStmtContext,0)


        def expressionStmt(self):
            return self.getTypedRuleContext(KabaParser.ExpressionStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(KabaParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(KabaParser.WhileStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(KabaParser.ForStmtContext,0)


        def tryCatchStmt(self):
            return self.getTypedRuleContext(KabaParser.TryCatchStmtContext,0)


        def throwStmt(self):
            return self.getTypedRuleContext(KabaParser.ThrowStmtContext,0)


        def getRuleIndex(self):
            return KabaParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = KabaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.declarationStmt()
                self.state = 83
                self.terminator()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.assignmentStmt()
                self.state = 86
                self.terminator()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.expressionStmt()
                self.state = 89
                self.terminator()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 91
                self.ifStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 92
                self.whileStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 93
                self.forStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 94
                self.tryCatchStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 95
                self.throwStmt()
                self.state = 96
                self.terminator()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TerminatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AMK(self):
            return self.getToken(KabaParser.AMK, 0)

        def AMQ(self):
            return self.getToken(KabaParser.AMQ, 0)

        def AQ(self):
            return self.getToken(KabaParser.AQ, 0)

        def AMIK(self):
            return self.getToken(KabaParser.AMIK, 0)

        def AMINAKOYUM(self):
            return self.getToken(KabaParser.AMINAKOYUM, 0)

        def getRuleIndex(self):
            return KabaParser.RULE_terminator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerminator" ):
                listener.enterTerminator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerminator" ):
                listener.exitTerminator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerminator" ):
                return visitor.visitTerminator(self)
            else:
                return visitor.visitChildren(self)




    def terminator(self):

        localctx = KabaParser.TerminatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_terminator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 133143986176) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpec(self):
            return self.getTypedRuleContext(KabaParser.TypeSpecContext,0)


        def BOK(self):
            return self.getToken(KabaParser.BOK, 0)

        def SUFFIX(self):
            return self.getToken(KabaParser.SUFFIX, 0)

        def variableName(self):
            return self.getTypedRuleContext(KabaParser.VariableNameContext,0)


        def ÇÖK(self):
            return self.getToken(KabaParser.ÇÖK, 0)

        def TORBASI(self):
            return self.getToken(KabaParser.TORBASI, 0)

        def getRuleIndex(self):
            return KabaParser.RULE_declarationStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarationStmt" ):
                listener.enterDeclarationStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarationStmt" ):
                listener.exitDeclarationStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarationStmt" ):
                return visitor.visitDeclarationStmt(self)
            else:
                return visitor.visitChildren(self)




    def declarationStmt(self):

        localctx = KabaParser.DeclarationStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declarationStmt)
        try:
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.typeSpec()
                self.state = 103
                self.match(KabaParser.BOK)
                self.state = 104
                self.match(KabaParser.SUFFIX)
                self.state = 105
                self.variableName()
                self.state = 106
                self.match(KabaParser.ÇÖK)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.typeSpec()
                self.state = 109
                self.match(KabaParser.BOK)
                self.state = 110
                self.match(KabaParser.TORBASI)
                self.state = 111
                self.match(KabaParser.SUFFIX)
                self.state = 112
                self.variableName()
                self.state = 113
                self.match(KabaParser.ÇÖK)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableRef(self):
            return self.getTypedRuleContext(KabaParser.VariableRefContext,0)


        def SUFFIX(self, i:int=None):
            if i is None:
                return self.getTokens(KabaParser.SUFFIX)
            else:
                return self.getToken(KabaParser.SUFFIX, i)

        def expression(self):
            return self.getTypedRuleContext(KabaParser.ExpressionContext,0)


        def SOK(self):
            return self.getToken(KabaParser.SOK, 0)

        def getRuleIndex(self):
            return KabaParser.RULE_assignmentStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStmt" ):
                listener.enterAssignmentStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStmt" ):
                listener.exitAssignmentStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentStmt" ):
                return visitor.visitAssignmentStmt(self)
            else:
                return visitor.visitChildren(self)




    def assignmentStmt(self):

        localctx = KabaParser.AssignmentStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignmentStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.variableRef()
            self.state = 118
            self.match(KabaParser.SUFFIX)
            self.state = 119
            self.expression()
            self.state = 120
            self.match(KabaParser.SUFFIX)
            self.state = 121
            self.match(KabaParser.SOK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(KabaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return KabaParser.RULE_expressionStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionStmt" ):
                listener.enterExpressionStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionStmt" ):
                listener.exitExpressionStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionStmt" ):
                return visitor.visitExpressionStmt(self)
            else:
                return visitor.visitChildren(self)




    def expressionStmt(self):

        localctx = KabaParser.ExpressionStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_expressionStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(KabaParser.ExpressionContext,0)


        def SIKTIYSE(self):
            return self.getToken(KabaParser.SIKTIYSE, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KabaParser.BlockContext)
            else:
                return self.getTypedRuleContext(KabaParser.BlockContext,i)


        def SIKMEDIYSE(self):
            return self.getToken(KabaParser.SIKMEDIYSE, 0)

        def getRuleIndex(self):
            return KabaParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = KabaParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.expression()
            self.state = 126
            self.match(KabaParser.SIKTIYSE)
            self.state = 127
            self.block()
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 128
                self.match(KabaParser.SIKMEDIYSE)
                self.state = 129
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(KabaParser.ExpressionContext,0)


        def SIKERKEN(self):
            return self.getToken(KabaParser.SIKERKEN, 0)

        def block(self):
            return self.getTypedRuleContext(KabaParser.BlockContext,0)


        def getRuleIndex(self):
            return KabaParser.RULE_whileStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def whileStmt(self):

        localctx = KabaParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_whileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.expression()
            self.state = 133
            self.match(KabaParser.SIKERKEN)
            self.state = 134
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableName(self):
            return self.getTypedRuleContext(KabaParser.VariableNameContext,0)


        def SUFFIX(self, i:int=None):
            if i is None:
                return self.getTokens(KabaParser.SUFFIX)
            else:
                return self.getToken(KabaParser.SUFFIX, i)

        def arrayRef(self):
            return self.getTypedRuleContext(KabaParser.ArrayRefContext,0)


        def SALLAYARAK(self):
            return self.getToken(KabaParser.SALLAYARAK, 0)

        def block(self):
            return self.getTypedRuleContext(KabaParser.BlockContext,0)


        def getRuleIndex(self):
            return KabaParser.RULE_forStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStmt" ):
                listener.enterForStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStmt" ):
                listener.exitForStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStmt" ):
                return visitor.visitForStmt(self)
            else:
                return visitor.visitChildren(self)




    def forStmt(self):

        localctx = KabaParser.ForStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_forStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.variableName()
            self.state = 137
            self.match(KabaParser.SUFFIX)
            self.state = 138
            self.arrayRef()
            self.state = 139
            self.match(KabaParser.SUFFIX)
            self.state = 140
            self.match(KabaParser.SALLAYARAK)
            self.state = 141
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TryCatchStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DENESENE(self):
            return self.getToken(KabaParser.DENESENE, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KabaParser.BlockContext)
            else:
                return self.getTypedRuleContext(KabaParser.BlockContext,i)


        def SIÇARSA(self):
            return self.getToken(KabaParser.SIÇARSA, 0)

        def getRuleIndex(self):
            return KabaParser.RULE_tryCatchStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTryCatchStmt" ):
                listener.enterTryCatchStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTryCatchStmt" ):
                listener.exitTryCatchStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTryCatchStmt" ):
                return visitor.visitTryCatchStmt(self)
            else:
                return visitor.visitChildren(self)




    def tryCatchStmt(self):

        localctx = KabaParser.TryCatchStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_tryCatchStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(KabaParser.DENESENE)
            self.state = 144
            self.block()
            self.state = 145
            self.match(KabaParser.SIÇARSA)
            self.state = 146
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ThrowStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(KabaParser.ExpressionContext,0)


        def SUFFIX(self):
            return self.getToken(KabaParser.SUFFIX, 0)

        def PATLAT(self):
            return self.getToken(KabaParser.PATLAT, 0)

        def getRuleIndex(self):
            return KabaParser.RULE_throwStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterThrowStmt" ):
                listener.enterThrowStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitThrowStmt" ):
                listener.exitThrowStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitThrowStmt" ):
                return visitor.visitThrowStmt(self)
            else:
                return visitor.visitChildren(self)




    def throwStmt(self):
